# kaggle-wandb-sync

./: .gitignore  README.md  pyproject.toml
scripts/: gen_commands_doc.py
src/kaggle_wandb_sync/: __init__.py  _utils.py  cli.py
src/kaggle_wandb_sync/commands/: output.py  poll.py  push.py  run.py  score.py  sync.py
tests/: test_cli.py
