[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaggle-wandb-sync"
version = "0.1.4"
description = "A CLI tool to sync W&B offline runs from Kaggle Notebooks via GitHub Actions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "yasunorim" },
]
keywords = ["kaggle", "wandb", "weights-and-biases", "offline-sync", "github-actions", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "kaggle>=1.6.0",
    "wandb>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
kaggle-wandb-sync = "kaggle_wandb_sync.cli:main"

[project.urls]
Homepage = "https://github.com/yasumorishima/kaggle-wandb-sync"
Repository = "https://github.com/yasumorishima/kaggle-wandb-sync"

[tool.hatch.build.targets.wheel]
packages = ["src/kaggle_wandb_sync"]
